<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkeyeDex</string>
    <string name="terms_view">Terms And Conditions</string>
    <string name="settings_screen">Settings</string>
    <string name="add_account_btn">Add Account</string>
    <string name="accounts_screen">Accounts</string>
    <string name="login_screen">Add Account</string>
    <string name="account_screen">Incoming Settings</string>
    <string name="add_family_screen">Add Family Contacts</string>
    <string name="add_account_info">Add Account</string>
    <string name="proceed_home_btn">Proceed to Home</string>
    <string name="imageDescription">Splash Image  Here</string>
    <string name="desclimertext">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
    <string name="instruction_text">User must setup all "\n" email settings first "\n" before using this app</string>
    <string name="logindetails">Enter account information </string>
    <string name="emailid">Email Address</string>
    <string name="password">Password</string>
    <string name="next">Next      </string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="imap">IMAP server</string>
    <string name="port">Port</string>
    <string name="security">Security type</string>
    <string name="imap_path">IMAP path prifix</string>
    <string name="incoming_info">Incoming Settings</string>
    <string name="text">Text</string>
    <string name="newmsg">New Message</string>
    <string name="info">info</string>
    <string name="settings">Settings</string>
    <string name="authenticating">Checking Incoming Server Settings</string>
    <string name="autheticate">gmail</string>
    <string name="add_family_btn">Add Family Contacts</string>
    <string name="search_hint">Search Here</string>

</resources>