<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/AccSettings_relative_content"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <ScrollView
            android:id="@+id/AccSettings_scroll_coontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/AccSettings_REL_Bottom"
            android:background="@android:color/black" >

            <LinearLayout
                android:id="@+id/AccSettings_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/user_txt_AccSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/username_edit_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/password_txt_AccSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/pass" />

                <EditText
                    android:id="@+id/password_edit_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/imap_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/imap" />

                <EditText
                    android:id="@+id/imap_edit_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/port_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/port" />

                <EditText
                    android:id="@+id/port_edit_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/security_txt_AccSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/security" />

                <Spinner
                    android:id="@+id/security_spinner_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:drawSelectorOnTop="true" />

                <TextView
                    android:id="@+id/imap_path_txt_AccSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/imap_path" />

                <EditText
                    android:id="@+id/imap_path_edit_AccSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:hint="Optional"
                    android:singleLine="true" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/AccSettings_REL_Bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#666666" >

            <Button
                android:id="@+id/next_BTN_AccSettings"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dip"
                android:drawableRight="@drawable/right"
                android:gravity="center"
                android:text="@string/next" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>